--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/pro-components": "^2.7.0",
+    "@react-icons/all-files": "^4.1.0",
     "antd": "^5.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
