--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
@@ -30,6 +31,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.13",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-dir": "^4.0.0",
     "vite": "^5.2.0"
   }
 }
