--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@ant-design/pro-components": "^2.7.0",
     "@react-icons/all-files": "^4.1.0",
     "antd": "^5.16.0",
+    "dayjs": "^1.11.10",
+    "jalaali-js": "^1.2.6",
+    "jalaliday": "^2.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
