--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@ant-design/pro-components": "^2.7.0",
     "@react-icons/all-files": "^4.1.0",
     "antd": "^5.16.0",
