--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "jalaali-js": "^1.2.6",
     "jalaliday": "^2.3.0",
     "react": "^18.2.0",
+    "react-audio-player": "^0.17.0",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
