--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-audio-player": "^0.17.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-audio-voice-recorder": "^2.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
