--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "@chatscope/chat-ui-kit-react": "^2.0.3",
     "@react-icons/all-files": "^4.1.0",
     "antd": "^5.16.0",
+    "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "jalaliday": "^2.3.0",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
-    "react-audio-voice-recorder": "^2.2.0"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
